feat: frontend added
Co-authored-by: Ceren Gönen <gonenel22@itu.edu.tr>

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -2,8 +2,8 @@
 
 FROM postgres:16
 
-ENV POSTGRES_DB='blg317e'
-ENV POSTGRES_USER='dbuser'
-ENV POSTGRES_PASSWORD='insecure-password_NO-NOT-EXPOSE-THIS-DB-TO-PUBLIC'
+ENV POSTGRES_DB=blg317e
+ENV POSTGRES_USER=dbuser
+ENV POSTGRES_PASSWORD=insecure-password_NO-NOT-EXPOSE-THIS-DB-TO-PUBLIC
 
 COPY *.sql /docker-entrypoint-initdb.d/
