intial-commit: frontend

--- a/.env.docker
+++ b/.env.docker
@@ -4,4 +4,6 @@
 DATABASE_URL=postgres://dbuser:password@postgres/blg317e
 HOST=0.0.0.0
 PORT=6767
-INTERNAL_ACCESS_TOKEN=S3t-th1$-t0-50mEThinG-s3cuRe
+INTERNAL_ACCESS_TOKEN=internal-access-token
+MANAGEMENT_CONSOLE_TOKEN=management-console-token
+JWT_SECRET=jwt-secret
