--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DATABASE_URL=postgres://dbuser:insecure-password_NO-NOT-EXPOSE-THIS-DB-TO-PUBLIC@localhost:2345/blg317e
 HOST=127.0.0.1
 PORT=6767
-INTERNAL_ACCESS_TOKEN=S3t-th1$-t0-50mEThinG-s3cuRe
+INTERNAL_ACCESS_TOKEN=internal-access-token
+MANAGEMENT_CONSOLE_TOKEN=management-console-token
+JWT_SECRET=jwt-secret
